elk/logstash/k8s/logstash-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: logging-logstash
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: logging
        k8s-app: logstash
    spec:
      containers:
      - name: logstash
        image: 172.31.21.226/library/logstash:6.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5044
          name: lumberjack
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/logstash/config/logstash.yml
          name: config
          subPath: logstash.yml
        - mountPath: /usr/share/logstash/pipeline/logstash.conf
          name: pipeline
          subPath: logstash.conf
      volumes:
      - name: config
        configMap:
          name: logstash-config
          items:
          - key: logstash.yml
            path: logstash.yml
      - name: pipeline
        configMap:
          name: logstash-config
          items:
          - key: logstash.conf
            path: logstash.conf
