elk/logstash/k8s/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    task: logging
    kubernetes.io/name: logstash
  name: logging-logstash
  namespace: kube-system
spec:
  ports:
  - port: 5044
    targetPort: 5044
    name: lumberjack
  selector:
    k8s-app: logstash
