elk/logstash/k8s/logstash-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logstash-ingress
spec:
  backend:
    serviceName: logstash
    servicePort: 5044
